--- a/src/test.scss
+++ b/src/test.scss
@@ -3,11 +3,13 @@
     background: #f0f;
     border: 1px solid rgba(0, 0, 0, 0.5);
     font-size: 16px;
+    margin: 2px;
 }
 
 @media (min-width: 600px){
     .dog {
         font-size: 17px;
+        margin: 4px;
     }
 }
 
